--- a/kodusorClient/kodusorClient/Views/Home/Soru.cshtml
+++ b/kodusorClient/kodusorClient/Views/Home/Soru.cshtml
@@ -10,7 +10,7 @@
             <i class="material-icons white-text">thumb_up</i><br />
             <span class="white-text">@Model.Soru.BegeniSayisi</span>
             <br /><i class="material-icons white-text" style="margin-top:5px;">thumb_down</i><br />
-            <i class="material-icons small">star</i>
+            <i class="material-icons small" onclick="SoruIDGetir(@Model.Soru.SoruID)">star</i>
         </div>
         <div class="col s11">
             <span class="white-text">
@@ -31,46 +31,81 @@
 
 @foreach (var item in Model.Soru.Cevaplar)
 {
-    <div class="card-panel blue-grey darken-2">
-        <div class="row">
-            <div class="col s1 valign">
-                <i class="material-icons white-text">thumb_up</i><br />
-                <span class="white-text">@item.BegeniSayisi</span>
-                <br /><i class="material-icons white-text" style="margin-top:5px;">thumb_down</i><br />
-                <i class="material-icons small">star</i>
-            </div>
-            <div class="col s11">
-                <span class="white-text">
-                    <span>@item.Cevap</span>
-                    <div class="row" style="margin-bottom:0px;"><br /><br /><br />
-                        <a class="waves-effect waves-light btn left">Yorum Ekle</a>
-                        <div class="white-text valign-wrapper right">
-                            <br />
-                            <span class="right-align">@item.Kullanici.Adi @item.Kullanici.Soyadi<br />@Model.Soru.Tarih</span>
-                        </div>
+
+    <ul class="collapsible" data-collapsible="expandable">
+
+        <li>
+            <div class="card-panel blue-grey darken-2" style="margin-top: 0px;">
+                <div class="row">
+                    <div class="col s1 valign">
+                        <i class="material-icons white-text">thumb_up</i><br />
+                        <span class="white-text">@item.BegeniSayisi</span>
+                        <br /><i class="material-icons white-text" style="margin-top:5px;">thumb_down</i><br />
+                        <i class="material-icons small" onclick="CevapIDGetir(@item.CevapID)">star</i>
                     </div>
-                </span>
-            </div>
-        </div>
-        
-    </div>
-    foreach (var yorum in item.YorumListesi)
-    {
-        <div class="row">
-            <div class="col s11 offset-s1">
-                <div class="card-panel teal">
-                    <span class="white-text">
-                        <p>@yorum.Yorum</p>
-                        <span class="right-align">@yorum.Kullanici.Adi @yorum.Kullanici.Soyadi<br />@yorum.Tarih</span>
-                    </span>
+                    <div class="col s11">
+                        <span class="white-text">
+                            <span>@item.Cevap</span>
+                            <div class="row" style="margin-bottom:0px;">
+                                <br /><br /><br />
+                                <a class="waves-effect waves-light btn left">Yorum Ekle</a>
+                                <div class="white-text valign-wrapper right">
+                                    <br />
+                                    <span class="right-align">@item.Kullanici.Adi @item.Kullanici.Soyadi<br />@Model.Soru.Tarih</span>
+                                </div>
+                            </div>
+                        </span>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
+            <div class="collapsible-header">Yorum Göster</div>
+            <div class="collapsible-body">
+                @foreach (var yorum in item.YorumListesi)
+                {
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="card-panel teal">
+                                <span class="white-text">
+                                    <p>@yorum.Yorum</p>
+                                    <span class="right-align">@yorum.Kullanici.Adi @yorum.Kullanici.Soyadi<br />@yorum.Tarih</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </li>
+    </ul>
 }
 
-
 <script>
+
+
+    function SoruIDGetir(soruID) {
+        var data = {
+            soruID: soruID
+        };
+        console.log(data);
+
+        $(function () {
+            $.post("/Home/SoruyuFavEkle", data, function (sonuc) {
+                alert(sonuc);
+            });
+        });
+    }
+
+    function CevapIDGetir(cevapID) {
+        var data = {
+            cevapID: cevapID
+        };
+        console.log(data);
+
+        $(function () {
+            $.post("/Home/CevabıFavEkle", data, function (sonuc) {
+                alert(sonuc);
+            });
+        });
+    }
 
     //function CevabiFavoriyeEkle(cevapID) {
     //    var data = {
