Arayüzdeki bazı sıkıntılar giderildi.

--- a/kodusorClient/kodusorClient/Views/Shared/_LayoutHome.cshtml
+++ b/kodusorClient/kodusorClient/Views/Shared/_LayoutHome.cshtml
@@ -15,7 +15,7 @@
     <nav>
         <div class="nav-wrapper blue-grey lighten-1">
             <div class="container" style="width:944px">
-                <a href="#!" class="brand-logo"><img src="~/Images/logo.png" /></a>
+                <a href="/Home/Index" class="brand-logo"><img src="~/Images/logo.png" style="margin-top:10px;" /></a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     @if (Session["kullaniciID"] == null)
