--- a/kodusorClient/kodusorClient/Views/Home/Soru.cshtml
+++ b/kodusorClient/kodusorClient/Views/Home/Soru.cshtml
@@ -55,7 +55,7 @@
     <ul class="collapsible" data-collapsible="expandable">
 
         <li>
-            <div class="card-panel blue-grey darken-2" style="margin-top: 0px;">
+            <div class="card-panel blue-grey darken-2" style="margin-top: 0px; margin-bottom:0px;">
                 <div class="row">
                     <div class="col s1 valign">
                         <a><i class="material-icons white-text" onclick="CevapBegen(@item.CevapID)">thumb_up</i></a><br />
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="collapsible-header">Yorum Göster</div>
+            <div class="collapsible-header teal white-text">Yorum Göster</div>
             <div class="collapsible-body">
                 @foreach (var yorum in item.YorumListesi)
                 {
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </form>
-                    <a class="waves-effect waves-light btn right-align" onclick="YorumYap(@item.CevapID)">Yorum Ekle</a>
+                    <a class="waves-effect waves-light btn right" style="margin-right:20px;" onclick="YorumYap(@item.CevapID)">Yorum Ekle</a>
                 </div>
             </div>
         </li>
@@ -159,7 +159,7 @@
 }
 
 <!-- Cevap alanı başlangıç -->
-<div class="card-panel blue-grey darken-2" style="margin-top: 0px;">
+<div class="card-panel blue-grey darken-2" style="margin-top: 0px; margin-bottom:0px;">
     <div class="row">
         <form class="col s12">
             <div class="row">
@@ -169,10 +169,10 @@
                         <textarea id="icon_prefix2" class="materialize-textarea cevapText"></textarea>
                         <label for="icon_prefix2">Cevabım</label>
                     </div>
-                    <span class="valign-wrapper right-align"><a class="waves-effect waves-light btn" onclick="CevapVer(@Model.Soru.SoruID)"><i class="material-icons right">send</i>Cevabı Kaydet</a></span>
                 </span>
             </div>
         </form>
+        <a class="waves-effect waves-light btn right" onclick="CevapVer(@Model.Soru.SoruID)"><i class="material-icons right">send</i>Cevabı Kaydet</a>
     </div>
 </div>
 <!-- Cevap alanı bitiş -->
